final malam jumat

--- a/index.html
+++ b/index.html
@@ -84,33 +84,33 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="pages/standar-pelayanan-publik.html"><span class="item-text">Standar Pelayanan Publik</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Pelayanan Hukum</span></a>
+                            <a class="dropdown-item" href="pages/produk-hukum.html"><span class="item-text">Pelayanan Hukum</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PPID</span></a>
+                            <a class="dropdown-item" href="pages/ppid.html"><span class="item-text">PPID</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="pages/prosedur-operasional-standar.html"><span class="item-text">Prosedur Operasional Standar</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="pages/peta-proses-bisnis.html"><span class="item-text">Peta Proses Bisnis LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Buku Panduan dan Pedoman</span></a>
+                            <a class="dropdown-item" href="pages/buku-panduan-pedoman.html"><span class="item-text">Buku Panduan dan Pedoman</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Materi Kegiatan</span></a>
+                            <a class="dropdown-item" href="pages/materi-kegiatan.html"><span class="item-text">Materi Kegiatan</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Bulletin LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="pages/bulletin.html"><span class="item-text">Bulletin LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Buku Direktori PTS LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="pages/buku-direktori.html"><span class="item-text">Buku Direktori PTS LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="https://pddikti.kemdikbud.go.id/publikasi"><span class="item-text">Buku Statistik Perguruan Tinggi</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="pages/kegiatan.html"><span class="item-text">Agenda Kegiatan</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Galeri</span></a>
+                            <a class="dropdown-item" href="pages/gallery.html"><span class="item-text">Galeri</span></a>
                         </div>
                     </li>
                     <!-- end of dropdown menu -->
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="log-in.html">KONTAK DAN PENGADUAN</a>
+                    <a class="btn-outline-sm" href="pages/kontak.html">KONTAK DAN PENGADUAN</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -264,7 +264,7 @@
         </div>
     </section>
     <!-- New Services -->
-
+    
   
     <!-- Gallery -->
     <div class="container">
@@ -494,33 +494,33 @@
                 <div class="col-lg-12">
                     <div class="icon-container">
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/LLDIKTI4">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="#https://twitter.com/lldiktiwilayah4">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.youtube.com/channel/UCElauai9u-s3jj_OM3wG3Ww/videos">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-pinterest-p fa-stack-1x"></i>
+                                <i class="fab fa-youtube fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="#instagram.com/lldiktiwilayah4/">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://api.whatsapp.com/send/?phone=%2B6282244121226&text=Hallo!%20Selamat%20Datang%20Di%20LLDIKTI%20Wilayah4">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                <i class="fab fa-whatsapp fa-stack-1x"></i>
                             </a>
                         </span>
                     </div> <!-- end of col -->
