--- a/pages/kontak.html
+++ b/pages/kontak.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Kontak & Pengaduan - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Akuntabilitas</h1>
+                    <h1>Kontak</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -47,7 +47,59 @@
     <!-- end of header -->
 
     <!-- Content -->
+    <h2 class="h2-title">KONTAK</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <h5>KONTAK</h5>
+                <P>022-727-5630 <br> Whatsapp <br> 082244121226 (Chat Only)</P>
+            </div>
 
+            <div class="col-lg-3">
+                <h5>Surel</h5>
+                <P>informasi@lldikti4.or.id</P>
+            </div>
+
+            <div class="col-lg-3">
+                <h5>Jam Operasional</h5>
+                <P>Senin 08.00–16.00 <br>
+                    Selasa 08.00–16.00 <br>
+                    Rabu 08.00–16.00 <br>
+                    Kamis 08.00–16.00 <br>
+                    Jumat 08.00–16.30 <br>
+                    Sabtu Tutup <br>
+                    Minggu Tutup
+                    )</P>
+            </div>
+
+            <div class="col-lg-3">
+                <h5>Alamat</h5>
+                <P>Jl. PH.H. Mustofa No.38, Cikutra, Kec. Cibeunying Kidul,
+                    Kota Bandung, Jawa Barat 40124</P>
+            </div>
+        </div>
+
+        <h3>PENGADUAN</h3>
+        <div class="services-grid">
+            <div class="service service1">
+              <img src="../images/lapor.webp" alt="">
+              <h4>LAPOR!</h4>
+              <a href="lapor.go.id" class="cta">Kunjungi</a>
+            </div>
+            <div class="service service2">
+              <img src="../images/lldikti.webp" alt="">
+              <h4>Whistle Blowing System</h4>
+              <p>Laporkan Bentuk Pelanggaran dan Penyimpangan ke LLDIKTI Wilayah IV</p>
+              <a href="whistleblowing.html" class="cta">Kunjungi</a>
+            </div>
+            <div class="service service3">
+              <img src="../images/lldikti.webp" alt="">
+              <h4>Survey Kepuasan Pelanggan</h4>
+              <p>Survey Kepuasan Pelanggan Pelayanan LLDIKTI WILAYAH IV</p>
+              <a href="survey-kepuasan-pelanggan.html" class="cta">Kunjungi</a>
+            </div>
+          </div>
+    </div>
     <!-- end of Content -->
 
     <!-- Navigation -->
@@ -70,7 +122,7 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="profil.html">Profil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="profil.html">Profil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="info.html">Info</a>
@@ -84,7 +136,7 @@
                     
                     <!-- Dropdown Menu -->          
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Layanan</a>
+                        <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Layanan</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="layanan-online.html"><span class="item-text">Layanan Online</span></a>
                             <div class="dropdown-items-divide-hr"></div>
@@ -97,27 +149,27 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Informasi Publik</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Standar Pelayanan Publik</span></a>
+                            <a class="dropdown-item" href="standar-pelayanan-publik.html"><span class="item-text">Standar Pelayanan Publik</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Pelayanan Hukum</span></a>
+                            <a class="dropdown-item" href="produk-hukum.html"><span class="item-text">Produk Hukum</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PPID</span></a>
+                            <a class="dropdown-item" href="ppid.html"><span class="item-text">PPID</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Prosedur Operasional Standar</span></a>
+                            <a class="dropdown-item" href="prosedur-operasional-standar.html"><span class="item-text">Prosedur Operasional Standar</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Peta Proses Bisnis LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="peta-proses-bisnis.html"><span class="item-text">Peta Proses Bisnis LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Buku Panduan dan Pedoman</span></a>
+                            <a class="dropdown-item" href="buku-panduan-pedoman.html"><span class="item-text">Buku Panduan dan Pedoman</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Materi Kegiatan</span></a>
+                            <a class="dropdown-item" href="materi-kegiatan.html"><span class="item-text">Materi Kegiatan</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Bulletin LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="bulletin.html"><span class="item-text">Bulletin LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Buku Direktori PTS LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="buku-direktori.html"><span class="item-text">Buku Direktori PTS LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Buku Statistik Perguruan Tinggi</span></a>
+                            <a class="dropdown-item" href="https://pddikti.kemdikbud.go.id/publikasi"><span class="item-text">Buku Statistik Perguruan Tinggi</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Agenda Kegiatan</span></a>
+                            <a class="dropdown-item" href="kegiatan.html"><span class="item-text">Agenda Kegiatan</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Galeri</span></a>
                         </div>
@@ -125,7 +177,7 @@
                     <!-- end of dropdown menu -->
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="log-in.html">KONTAK DAN PENGADUAN</a>
+                    <a class="btn-outline-sm" href="kontak.html">KONTAK DAN PENGADUAN</a>
                 </span>
             </div>
         </div> <!-- end of container -->
