--- a/pages/berita.html
+++ b/pages/berita.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>LLDIKTI 4</title>
+    <title>Berita - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -58,7 +58,7 @@
             <h5>Pendampingan Usulan Jabatan Akademik Dosen ke Perguruan Tinggi Swasta Wilayah Kota dan Kabupaten Bekasi, Karawang, dan Cikarang (26 Juli 2022)</h5>
         </div>
         <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
         </div>
         </div>
         <div class="news-card">
@@ -70,7 +70,7 @@
             <h5>Penyerahan SK Jabatan Akademik Dosen Kemdikbudristek</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
             </div>
         </div>
         <div class="news-card">
@@ -82,7 +82,7 @@
             <h5>PemInfohuan untuk Pemutakhiran Data pada SINTA</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
             </div>
         </div>
         <!-- end of Row1 -->
@@ -98,7 +98,7 @@
             <h5>UNDANGAN TRACERSTUDY PTS WILAYAH BANTEN DAN JAWA BARAT 2022</h5>
         </div>
         <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
         </div>
         </div>
         <div class="news-card">
@@ -110,7 +110,7 @@
             <h5>PENDAFTARAN MAGANG BERSERTIFIKAT</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
             </div>
         </div>
         <div class="news-card">
@@ -122,7 +122,7 @@
             <h5>UNDANGAN GRAND LAUNCHING WIRA USAHA MERDEKA TAHUN 2022</h5>
             </div>
             <div class="card__footer">
-            <a class="btn-solid-lg page-scroll" href="sign-up.html">Baca Selengkapnya</a>
+            <a class="btn-solid-lg page-scroll" href="content1.html">Baca Selengkapnya</a>
             </div>
         </div>
         <!-- end of Row1 -->
@@ -149,13 +149,13 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="profil.html">Profil <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="profil.html">Profil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="info.html">Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="berita.html">Akuntabilitas</a>
+                        <a class="nav-link page-scroll" href="akuntabilitas.html">Akuntabilitas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="berita.html">Berita</a>
@@ -163,9 +163,9 @@
                     
                     <!-- Dropdown Menu -->          
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Layanan</a>
+                        <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Layanan</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Layanan Online</span></a>
+                            <a class="dropdown-item" href="layanan-online.html"><span class="item-text">Layanan Online</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Layanan Kami</span></a>
                             <div class="dropdown-items-divide-hr"></div>
@@ -176,27 +176,27 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle page-scroll" href="#video" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Informasi Publik</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Standar Pelayanan Publik</span></a>
+                            <a class="dropdown-item" href="standar-pelayanan-publik.html"><span class="item-text">Standar Pelayanan Publik</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Pelayanan Hukum</span></a>
+                            <a class="dropdown-item" href="produk-hukum.html"><span class="item-text">Produk Hukum</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PPID</span></a>
+                            <a class="dropdown-item" href="ppid.html"><span class="item-text">PPID</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Prosedur Operasional Standar</span></a>
+                            <a class="dropdown-item" href="prosedur-operasional-standar.html"><span class="item-text">Prosedur Operasional Standar</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Peta Proses Bisnis LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="peta-proses-bisnis.html"><span class="item-text">Peta Proses Bisnis LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Buku Panduan dan Pedoman</span></a>
+                            <a class="dropdown-item" href="buku-panduan-pedoman.html"><span class="item-text">Buku Panduan dan Pedoman</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Materi Kegiatan</span></a>
+                            <a class="dropdown-item" href="materi-kegiatan.html"><span class="item-text">Materi Kegiatan</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Bulletin LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="bulletin.html"><span class="item-text">Bulletin LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Buku Direktori PTS LLDIKTI 4</span></a>
+                            <a class="dropdown-item" href="buku-direktori.html"><span class="item-text">Buku Direktori PTS LLDIKTI 4</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="article-details.html"><span class="item-text">Buku Statistik Perguruan Tinggi</span></a>
+                            <a class="dropdown-item" href="https://pddikti.kemdikbud.go.id/publikasi"><span class="item-text">Buku Statistik Perguruan Tinggi</span></a>
                             <div class="dropdown-items-divide-hr"></div>
-                            <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Agenda Kegiatan</span></a>
+                            <a class="dropdown-item" href="kegiatan.html"><span class="item-text">Agenda Kegiatan</span></a>
                             <div class="dropdown-items-divide-hr"></div>
                             <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Galeri</span></a>
                         </div>
@@ -204,7 +204,7 @@
                     <!-- end of dropdown menu -->
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="log-in.html">KONTAK DAN PENGADUAN</a>
+                    <a class="btn-outline-sm" href="kontak.html">KONTAK DAN PENGADUAN</a>
                 </span>
             </div>
         </div> <!-- end of container -->
