--- a/pages/buku-direktori.html
+++ b/pages/buku-direktori.html
@@ -9,7 +9,7 @@
     <meta name="author" content="LLDIKTI">
 
     <!-- Website Title -->
-    <title>Survey Kepuasan Pelanggan - LLDIKTI 4</title>
+    <title>Buku Direktori PTS LLDIKTI IV - LLDIKTI 4</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>SURVEY KEPUASAN PELANGGAN</h1>
+                    <h1>Buku Direktori PTS LLDIKTI IV</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -47,194 +47,7 @@
     <!-- end of header -->
 
     <!-- Content -->
-    <div class="ex-basic-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="image-container-large">
-                        <img src="../images/survey.webp" alt="alternative">
-                    </div> <!-- end of image-container-large -->
-                    <div class="text-container">
-                        <h3><a class="linked-text" href="https://form.jotform.com/adisalannuary/SurveyPelangganLLDIKTI-IV">FORM SURVEY KEPUASAN PELANGGAN LAYANAN KANTOR LLDIKTI WILAYAH IV</a></h3>
-                        <h5>Survey Kepuasan Pelanggan Pelayanan LLDIKTI WILAYAH IV</h5>
-                        <p>Dalam rangka upaya peningkatan kualitas pelayanan kami, maka Lembaga Layanan Pendidikan Tinggi Wilayah IV mengadakan survey untuk mengetahui tingkat kepuasan pelayanan. Jika anda adalah stakeholder kami, atau masyarakat umum yang pernah merasakan pelayanan kami, merupakan kehormatan bagi kami jika anda mengikuti survery berikut.</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <ul class="list-unstyled li-space-lg indent">
-                                    <h5>LAYANAN KEPEGAWAIAN (HKT)</h5>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENETAPAN INPASSING PANGKAT DOSEN BUKAN PNS GOLONGAN III & IV (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN ALIH JABATAN / TUGAS PNS NON DOSEN MENJADI PNS DOSEN (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN MUTASI DOSEN PEGAWAI NEGERI SIPIL DIPEKERJAKAN (DPK) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN REKOMENDASI MUTASI DOSEN PEGAWAI NEGERI SIPIL (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN TUGAS BELAJAR PEGAWAI NEGERI SIPIL DIPEKERJAKAN (DPK) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN IZIN BELAJAR DOSEN PEGAWAI NEGERI SIPIL DIPEKERJAKAN (DPK) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN KENAIKAN PANGKAT/GOLONGAN DOSEN PNS DIPEKERJAKAN (DPK) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PINDAH HOMEBASE DOSEN TETAP YAYASAN DAN DOSEN PNS DPK (File) (Form Survey)</div>
-                                    </li>
-                                </ul>
-                                
-                                <br>
 
-                                <ul class="list-unstyled li-space-lg indent">
-                                    <h5>LAYANAN DIKTENDIK</h5>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENILAIAN ANGKA KREDIT JABATAN AKADEMIK DOSEN ASISTEN AHLI DAN LEKTOR (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN REKOMENDASI JABATAN AKADEMIK DOSEN LEKTOR KEPALA DAN PROFESOR (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PEMBERIAN REKOMENDASI BEASISWA DOSEN (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PEMBERIAN PERPANJANGAN WAKTU BEASISWA LUAR NEGERI (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN TATA USAHA (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN AUDIENSI INSTANSI PEMERINTAH ATAU LEMBAGA LAIN (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENYEDIAAN NARASUMBER  (File) (Form Survey)</div>
-                                    </li>
-                                </ul>
-
-                                <br>
-
-                                <ul class="list-unstyled li-space-lg indent">
-                                    <h5>LAYANAN KELEMBAGAAN</h5>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN KELEMBAGAAN DAN KERJASAMA (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN ALIH BINA PERGURUAN TINGGI SWASTA (PTS) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PERUBAHAN NAMA BADAN PENYELENGGARA PERGURUAN TINGGI SWASTA (PTS) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENDIRIAN PERGURUAN TINGGI SWASTA (PTS) DAN PEMBUKAAN PROGRAM STUDI BARU (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PERUBAHAN BENTUK PERGURUAN TINGGI SWASTA (PTS) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENYELESAIAN MASALAH PERGURUAN TINGGI SWASTA (PTS) TIDAK TAAT AZAS (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENGEMBANGAN KAMPUS DAN PERKULIAHAN DI LUAR DOMISILI (File) (Form Survey)</div>
-                                    </li>
-                                </ul>
-
-                                <br>
-
-                                <ul class="list-unstyled li-space-lg indent">
-                                    <h5>LAYANAN SISTEM INFORMASI DAN KERJASAMA \</h5>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PELAPORAN SEMESTERAN AKADEMIK DAN PROSES BELAJAR MENGAJAR (PBM) PADA PANGKALAN DATA PENDIDIKAN TINGGI (PDDIKTI) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PUBLIKASI INFORMASI (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN VALIDASI PERUBAHAN DATA POKOK DOSEN PADA PANGKALAN DATA PENDIDIKAN TINGGI (PD DIKTI) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENGAJUAN NIDN, NUPN, NIDK DAN PERUBAHAN NOMOR REGISTRASI (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN VALIDASI CALON PESERTA UJI KOMPETENSI MAHASISWA PROGRAM STUDI KESEHATAN PADA PANGKALAN DATA PENDIDIKAN TINGGI (PD DIKTI)  (File) (Form Survey)</div>
-                                    </li>
-                                </ul>
-
-                                <br>
-
-                                <ul class="list-unstyled li-space-lg indent">
-                                    <h5>LAYANAN KEMAHASISWAAN</h5>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN AKADEMIK DAN KEMAHASISWAAN (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN VALIDASI IJAZAH (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN VALIDASI PERUBAHAN DATA POKOK DOSEN PADA PANGKALAN DATA PENDIDIKAN TINGGI (PD DIKTI) (File) (Form Survey)</div>
-                                    </li>
-                                </ul>
-
-                                <br>
-
-                                <ul class="list-unstyled li-space-lg indent">
-                                    <h5>LAYANAN AKADEMIK</h5>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">Layanan Hibah Penelitian (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN VALIDASI IJAZAH (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN VALIDASI PERUBAHAN DATA POKOK DOSEN PADA PANGKALAN DATA PENDIDIKAN TINGGI (PD DIKTI) (File) (Form Survey)</div>
-                                    </li>
-                                    <li class="media">
-                                        <i class="fas fa-square"></i>
-                                        <div class="media-body">LAYANAN PENGAJUAN NIDN, NUPN, NIDK DAN PERUBAHAN NOMOR REGISTRASI (File) (Form Survey)</div>
-                                    </li>
-                            </div> <!-- end of col -->
-                        </div> <!-- end of row -->
-                    </div> <!-- end of text-container-->
-                </div> <!-- end of col-->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-2 -->
     <!-- end of Content -->
 
     <!-- Navigation -->
@@ -318,7 +131,6 @@
         </div> <!-- end of container -->
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
-
 
 
     <!-- Footer -->
